kubernetes/apps/network/stunner/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.kubernetes.io/hostname: "turn.kubes.cloud"
    external-dns.kubernetes.io/target: "54.36.18.175"
    stunner.l7mp.io/enable-mixed-protocol-lb: "true"
  labels:
    stunner.l7mp.io/owned-by: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  name: stunner-external
spec:
  allocateLoadBalancerNodePorts: true
  externalIPs:
    - "54.36.18.175"
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ports:
    - name: udp
      port: 13478
      protocol: UDP
      targetPort: 13478
    - name: tls
      port: 15349
      protocol: TCP
      targetPort: 15349
  selector:
    app: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: LoadBalancer
